--- a/src/Baasic.Client.Model/Baasic.Client.Model.csproj
+++ b/src/Baasic.Client.Model/Baasic.Client.Model.csproj
@@ -42,9 +42,12 @@
   <ItemGroup>
     <Compile Include="ICollectionModel.cs" />
     <Compile Include="IModel.cs" />
+    <Compile Include="KeyValue\KeyValue.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="CollectionModelBase.cs" />
     <Compile Include="ModelBase.cs" />
+    <Compile Include="ValueSet\ValueSetItem.cs" />
+    <Compile Include="ValueSet\ValueSet.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
