Working on KeyValue module client Changing signatures inside the BaasicClient

--- a/src/Baasic.Client/Baasic.Client.csproj
+++ b/src/Baasic.Client/Baasic.Client.csproj
@@ -51,8 +51,12 @@
   <ItemGroup>
     <Compile Include="BaasicClient.cs" />
     <Compile Include="ClientBase.cs" />
+    <Compile Include="Configuration\ClientConfiguration.cs" />
+    <Compile Include="Configuration\IClientConfiguration.cs" />
     <Compile Include="KeyValue\KeyValueClient.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TokenHandler\DefaultTokenHandler.cs" />
+    <Compile Include="TokenHandler\ITokenHandler.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Baasic.Client.Model\Baasic.Client.Model.csproj">
