--- a/src/Baasic.Client/Baasic.Client.csproj
+++ b/src/Baasic.Client/Baasic.Client.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TokenHandler\DefaultTokenHandler.cs" />
     <Compile Include="TokenHandler\ITokenHandler.cs" />
+    <Compile Include="UrlBuilder.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Baasic.Client.Model\Baasic.Client.Model.csproj">
