--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ src/Baasic.Client.Model/bin/
 src/Baasic.Client/obj/
 src/Baasic.Client/bin/
 packages/
+src/Baasic.Client.Tests/obj/
+src/Baasic.Client.Tests/bin/
