Working on BaasicClient tests

--- a/src/Baasic.Client/Baasic.Client.csproj
+++ b/src/Baasic.Client/Baasic.Client.csproj
@@ -56,13 +56,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DefaultDependencyResolver.cs" />
     <Compile Include="IBaasicClient.cs" />
     <Compile Include="BaasicClient.cs" />
     <Compile Include="ClientBase.cs" />
     <Compile Include="Configuration\ClientConfiguration.cs" />
     <Compile Include="Configuration\IClientConfiguration.cs" />
-    <Compile Include="Internals\StandardFactory.cs" />
-    <Compile Include="Internals\IFactory.cs" />
+    <Compile Include="IDependencyResolverExtensions.cs" />
+    <Compile Include="IDependencyResolver .cs" />
+    <Compile Include="KeyValue\IKeyValueClient.cs" />
     <Compile Include="KeyValue\KeyValueClient.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TokenHandler\DefaultTokenHandler.cs" />
