--- a/src/Baasic.Client/Baasic.Client.csproj
+++ b/src/Baasic.Client/Baasic.Client.csproj
@@ -67,8 +67,12 @@
     <Compile Include="KeyValue\IKeyValueClient.cs" />
     <Compile Include="KeyValue\KeyValueClient.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TokenHandler\AuthenticationToken.cs" />
     <Compile Include="TokenHandler\DefaultTokenHandler.cs" />
+    <Compile Include="TokenHandler\IAuthenticationToken.cs" />
     <Compile Include="TokenHandler\ITokenHandler.cs" />
+    <Compile Include="Token\ITokenClient.cs" />
+    <Compile Include="Token\TokenClient.cs" />
     <Compile Include="UrlBuilder.cs" />
   </ItemGroup>
   <ItemGroup>
