--- a/src/Baasic.Client.Tests/packages.config
+++ b/src/Baasic.Client.Tests/packages.config
@@ -5,5 +5,6 @@
   <package id="Microsoft.Bcl.Build" version="1.0.10" targetFramework="net45" />
   <package id="Microsoft.Net.Http" version="2.2.18" targetFramework="net45" />
   <package id="Moq" version="4.2.1402.2112" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="6.0.1" targetFramework="net45" />
   <package id="xunit" version="1.9.2" targetFramework="net45" />
 </packages>
