--- a/src/Baasic.Client/Baasic.Client.csproj
+++ b/src/Baasic.Client/Baasic.Client.csproj
@@ -57,6 +57,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DefaultDependencyResolver.cs" />
+    <Compile Include="Formatters\IJsonFormatter.cs" />
+    <Compile Include="Formatters\JsonFormatter.cs" />
     <Compile Include="IBaasicClient.cs" />
     <Compile Include="BaasicClient.cs" />
     <Compile Include="ClientBase.cs" />
