--- a/src/Baasic.Client.Model/Baasic.Client.Model.csproj
+++ b/src/Baasic.Client.Model/Baasic.Client.Model.csproj
@@ -42,6 +42,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Articles\Tag.cs" />
+    <Compile Include="Articles\Rating.cs" />
+    <Compile Include="Articles\Comment.cs" />
+    <Compile Include="Articles\Author.cs" />
+    <Compile Include="Articles\Article.cs" />
     <Compile Include="ICollectionModel.cs" />
     <Compile Include="IModel.cs" />
     <Compile Include="KeyValue\KeyValue.cs" />
@@ -51,6 +56,7 @@
     <Compile Include="ValueSet\ValueSetItem.cs" />
     <Compile Include="ValueSet\ValueSet.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
