--- a/src/Baasic.Client/Baasic.Client.csproj
+++ b/src/Baasic.Client/Baasic.Client.csproj
@@ -59,6 +59,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Clients\Articles\ArticleTagClient.cs" />
+    <Compile Include="Clients\Articles\IArticleTagClient.cs" />
     <Compile Include="HttpClientFactory.cs" />
     <Compile Include="BaasicClientFactory.cs" />
     <Compile Include="Clients\Articles\IArticleClient.cs" />
