--- a/src/Baasic.Client.Tests/Baasic.Client.Tests.csproj
+++ b/src/Baasic.Client.Tests/Baasic.Client.Tests.csproj
@@ -79,6 +79,7 @@
   <ItemGroup>
     <Compile Include="BaasicClientTests.cs" />
     <Compile Include="Clients\Articles\ArticleClientTests.cs" />
+    <Compile Include="Clients\Articles\ArticleTagClientTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Token\TokenClientTests.cs" />
   </ItemGroup>
