Introduced Built-In model base that is used for all built-in model as they use GUID as primary key identifier

--- a/src/Baasic.Client.Model/Baasic.Client.Model.csproj
+++ b/src/Baasic.Client.Model/Baasic.Client.Model.csproj
@@ -50,8 +50,10 @@
     <Compile Include="Articles\Author.cs" />
     <Compile Include="Articles\Article.cs" />
     <Compile Include="ICollectionModel.cs" />
+    <Compile Include="IBuiltInModel.cs" />
     <Compile Include="IModel.cs" />
     <Compile Include="KeyValue\KeyValue.cs" />
+    <Compile Include="BuiltInModelBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="CollectionModelBase.cs" />
     <Compile Include="ModelBase.cs" />
