--- a/src/Baasic.Client.Common/Baasic.Client.Common.csproj
+++ b/src/Baasic.Client.Common/Baasic.Client.Common.csproj
@@ -5,16 +5,17 @@
     <MinimumVisualStudioVersion>11.0</MinimumVisualStudioVersion>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{94197638-4537-46A5-A641-5E1B9626F2E8}</ProjectGuid>
+    <ProjectGuid>{D9A9B364-8F08-4C40-A307-95C0C5D95FB9}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Baasic.Client.Model</RootNamespace>
-    <AssemblyName>Baasic.Client.Model</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
-    <TargetFrameworkProfile>Profile78</TargetFrameworkProfile>
+    <RootNamespace>Baasic.Client.Common</RootNamespace>
+    <AssemblyName>Baasic.Client.Common</AssemblyName>
+    <DefaultLanguage>en-US</DefaultLanguage>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{786C830F-07A1-408B-BD7F-6EE04809D6DB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
-    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\..\</SolutionDir>
+    <TargetFrameworkProfile>Profile111</TargetFrameworkProfile>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
     <RestorePackages>true</RestorePackages>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -35,36 +36,19 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Xml" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="Articles\ArticleStatus.cs" />
-    <Compile Include="Articles\ArticleTagEntry.cs" />
-    <Compile Include="Articles\ArticleTag.cs" />
-    <Compile Include="Articles\Rating.cs" />
-    <Compile Include="Articles\Comment.cs" />
-    <Compile Include="Articles\Author.cs" />
-    <Compile Include="Articles\Article.cs" />
-    <Compile Include="ICollectionModel.cs" />
-    <Compile Include="IBuiltInModel.cs" />
-    <Compile Include="IModel.cs" />
-    <Compile Include="KeyValue\KeyValue.cs" />
-    <Compile Include="BuiltInModelBase.cs" />
+    <Compile Include="Extensions\EncodingExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="CollectionModelBase.cs" />
-    <Compile Include="ModelBase.cs" />
-    <Compile Include="ValueSet\ValueSetItem.cs" />
-    <Compile Include="ValueSet\ValueSet.cs" />
+    <Compile Include="Utility\SGuidConverter.cs" />
+    <Compile Include="Utility\BitStream.cs" />
+    <Compile Include="Utility\SGuid.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Baasic.Client.Common\Baasic.Client.Common.csproj">
-      <Project>{d9a9b364-8f08-4c40-a307-95c0c5d95fb9}</Project>
-      <Name>Baasic.Client.Common</Name>
-    </ProjectReference>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\packages\Newtonsoft.Json.6.0.8\lib\portable-net45+wp80+win8+wpa81+aspnetcore50\Newtonsoft.Json.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
