--- a/src/Baasic.Client.Tests/Baasic.Client.Tests.csproj
+++ b/src/Baasic.Client.Tests/Baasic.Client.Tests.csproj
@@ -49,7 +49,7 @@
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Newtonsoft.Json.6.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <HintPath>..\packages\Newtonsoft.Json.6.0.8\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Net.Http" />
@@ -88,6 +88,10 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Baasic.Client.Common\Baasic.Client.Common.csproj">
+      <Project>{d9a9b364-8f08-4c40-a307-95c0c5d95fb9}</Project>
+      <Name>Baasic.Client.Common</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Baasic.Client.Model\Baasic.Client.Model.csproj">
       <Project>{94197638-4537-46a5-a641-5e1b9626f2e8}</Project>
       <Name>Baasic.Client.Model</Name>
