--- a/src/Baasic.Client.Model/Baasic.Client.Model.csproj
+++ b/src/Baasic.Client.Model/Baasic.Client.Model.csproj
@@ -49,6 +49,8 @@
     <Compile Include="Articles\Comment.cs" />
     <Compile Include="Articles\Author.cs" />
     <Compile Include="Articles\Article.cs" />
+    <Compile Include="Dynamic\Owner.cs" />
+    <Compile Include="Dynamic\DynamicSchema.cs" />
     <Compile Include="ICollectionModel.cs" />
     <Compile Include="IBuiltInModel.cs" />
     <Compile Include="IModel.cs" />
@@ -66,6 +68,7 @@
       <Name>Baasic.Client.Common</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
