--- a/src/Baasic.Client.Model/Baasic.Client.Model.csproj
+++ b/src/Baasic.Client.Model/Baasic.Client.Model.csproj
@@ -56,6 +56,8 @@
     <Compile Include="IModel.cs" />
     <Compile Include="KeyValue\KeyValue.cs" />
     <Compile Include="BuiltInModelBase.cs" />
+    <Compile Include="Membership\Role.cs" />
+    <Compile Include="Membership\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="CollectionModelBase.cs" />
     <Compile Include="ModelBase.cs" />
