--- a/src/Baasic.Client/packages.config
+++ b/src/Baasic.Client/packages.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.2" targetFramework="portable-net45+win+wp80" />
-  <package id="Microsoft.Bcl" version="1.1.9" targetFramework="portable-net45+wp80+win" />
-  <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="portable-net45+wp80+win" />
-  <package id="Microsoft.Net.Http" version="2.2.28" targetFramework="portable-net45+win+wp80" />
-  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="portable-net45+win+wp80" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="portable-net45+win+wpa81" developmentDependency="true"/>
+  <package id="Microsoft.Bcl" version="1.1.9" targetFramework="portable-net45+win+wpa81" />
+  <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="portable-net45+win+wpa81" />
+  <package id="Microsoft.Net.Http" version="2.2.22" targetFramework="portable-net45+win+wpa81" />
+  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="portable-net45+win+wpa81" />
 </packages>
