Working on Profile and End-point ACL implementation

--- a/src/Baasic.Client/Baasic.Client.csproj
+++ b/src/Baasic.Client/Baasic.Client.csproj
@@ -68,6 +68,8 @@
     <Compile Include="Clients\Articles\IArticleTagClient.cs" />
     <Compile Include="Clients\Dynamic\DynamicResourceClient.cs" />
     <Compile Include="Clients\Dynamic\IDynamicResourceClient.cs" />
+    <Compile Include="Clients\Profile\IProfileClient.cs" />
+    <Compile Include="Clients\Profile\KeyValueClient.cs" />
     <Compile Include="HttpClientFactory.cs" />
     <Compile Include="BaasicClientFactory.cs" />
     <Compile Include="Clients\Articles\IArticleClient.cs" />
