--- a/src/Baasic.Client.Model/Baasic.Client.Model.csproj
+++ b/src/Baasic.Client.Model/Baasic.Client.Model.csproj
@@ -61,6 +61,15 @@
     <Compile Include="BuiltInModelBase.cs" />
     <Compile Include="Membership\Role.cs" />
     <Compile Include="Membership\User.cs" />
+    <Compile Include="Permissions\AccessPolicy.cs" />
+    <Compile Include="Permissions\AccessAction.cs" />
+    <Compile Include="Profile\Company.cs" />
+    <Compile Include="Profile\Organization.cs" />
+    <Compile Include="Profile\Skill.cs" />
+    <Compile Include="Profile\UserEducation.cs" />
+    <Compile Include="Profile\UserProfile.cs" />
+    <Compile Include="Profile\UserSkill.cs" />
+    <Compile Include="Profile\UserWork.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="CollectionModelBase.cs" />
     <Compile Include="ModelBase.cs" />
@@ -76,6 +85,7 @@
   <ItemGroup>
     <None Include="Baasic.Client.Model.nuspec" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
