Working on Profile and End-point ACL implementation

--- a/src/Baasic.Client.Tests/Baasic.Client.Tests.csproj
+++ b/src/Baasic.Client.Tests/Baasic.Client.Tests.csproj
@@ -93,6 +93,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
+    <None Include="Baasic.Client.Tests.nuspec" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
