--- a/src/Baasic.Client/Baasic.Client.csproj
+++ b/src/Baasic.Client/Baasic.Client.csproj
@@ -69,7 +69,7 @@
     <Compile Include="Clients\Dynamic\DynamicResourceClient.cs" />
     <Compile Include="Clients\Dynamic\IDynamicResourceClient.cs" />
     <Compile Include="Clients\Profile\IProfileClient.cs" />
-    <Compile Include="Clients\Profile\KeyValueClient.cs" />
+    <Compile Include="Clients\Profile\ProfileClient.cs" />
     <Compile Include="HttpClientFactory.cs" />
     <Compile Include="BaasicClientFactory.cs" />
     <Compile Include="Clients\Articles\IArticleClient.cs" />
