--- a/src/Baasic.Client.Model/Baasic.Client.Model.csproj
+++ b/src/Baasic.Client.Model/Baasic.Client.Model.csproj
@@ -61,8 +61,8 @@
     <Compile Include="BuiltInModelBase.cs" />
     <Compile Include="Membership\Role.cs" />
     <Compile Include="Membership\User.cs" />
-    <Compile Include="Permissions\AccessPolicy.cs" />
-    <Compile Include="Permissions\AccessAction.cs" />
+    <Compile Include="ACL\AccessPolicy.cs" />
+    <Compile Include="ACL\AccessAction.cs" />
     <Compile Include="Profile\Company.cs" />
     <Compile Include="Profile\Organization.cs" />
     <Compile Include="Profile\Skill.cs" />
