Finished refactoring the namespaces Implemented DI container Implemented WebHost used for handling tokens in ASP.NET MVC & WebAPI environment

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,7 @@ src/Baasic.Client.Common/bin/
 src/Baasic.Client.Common/obj/
 src/Baasic.Client.Ninject/bin/
 src/Baasic.Client.Ninject/obj/
+
+
+ClearAssemblyCache.cmd
+PushNuGets.cmd
