--- a/src/Baasic.Client.Model/Baasic.Client.Model.csproj
+++ b/src/Baasic.Client.Model/Baasic.Client.Model.csproj
@@ -59,6 +59,7 @@
     <Compile Include="IModel.cs" />
     <Compile Include="KeyValue\KeyValue.cs" />
     <Compile Include="BuiltInModelBase.cs" />
+    <Compile Include="Membership\UpdatePasswordDTO.cs" />
     <Compile Include="Membership\Role.cs" />
     <Compile Include="Membership\User.cs" />
     <Compile Include="ACL\AccessPolicy.cs" />
