--- a/src/Baasic.Client/Baasic.Client.csproj
+++ b/src/Baasic.Client/Baasic.Client.csproj
@@ -38,8 +38,8 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.6.0.4\lib\portable-net45+wp80+win8+wpa81\Newtonsoft.Json.dll</HintPath>
+    <Reference Include="Newtonsoft.Json, Version=8.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.8.0.3\lib\portable-net45+wp80+win8+wpa81+dnxcore50\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
@@ -68,33 +68,37 @@
     <Compile Include="Clients\Articles\IArticleTagClient.cs" />
     <Compile Include="Clients\Dynamic\DynamicResourceClient.cs" />
     <Compile Include="Clients\Dynamic\IDynamicResourceClient.cs" />
+    <Compile Include="Clients\Membership\IUserClient.cs" />
+    <Compile Include="Clients\Membership\IRoleClient.cs" />
+    <Compile Include="Clients\Membership\UserClient.cs" />
+    <Compile Include="Clients\Membership\RoleClient.cs" />
     <Compile Include="Clients\Profile\IProfileClient.cs" />
     <Compile Include="Clients\Profile\ProfileClient.cs" />
-    <Compile Include="HttpClientFactory.cs" />
-    <Compile Include="BaasicClientFactory.cs" />
+    <Compile Include="Infrastructure\Core\HttpClientFactory.cs" />
+    <Compile Include="Infrastructure\Core\BaasicClientFactory.cs" />
     <Compile Include="Clients\Articles\IArticleClient.cs" />
     <Compile Include="Clients\Articles\ArticleClient.cs" />
-    <Compile Include="DefaultDependencyResolver.cs" />
+    <Compile Include="Infrastructure\DependencyInjection\DefaultDependencyResolver.cs" />
     <Compile Include="Formatters\IJsonFormatter.cs" />
     <Compile Include="Formatters\JsonFormatter.cs" />
-    <Compile Include="IHttpClientFactory.cs" />
-    <Compile Include="IBaasicClientFactory.cs" />
-    <Compile Include="IBaasicClient.cs" />
-    <Compile Include="BaasicClient.cs" />
-    <Compile Include="ClientBase.cs" />
+    <Compile Include="Infrastructure\Core\IHttpClientFactory.cs" />
+    <Compile Include="Infrastructure\Core\IBaasicClientFactory.cs" />
+    <Compile Include="Infrastructure\Core\IBaasicClient.cs" />
+    <Compile Include="Infrastructure\Core\BaasicClient.cs" />
+    <Compile Include="Infrastructure\Core\ClientBase.cs" />
     <Compile Include="Configuration\ClientConfiguration.cs" />
     <Compile Include="Configuration\IClientConfiguration.cs" />
-    <Compile Include="IDependencyResolverExtensions.cs" />
-    <Compile Include="IDependencyResolver .cs" />
+    <Compile Include="Infrastructure\DependencyInjection\DIModule.cs" />
+    <Compile Include="Infrastructure\DependencyInjection\IDependencyResolver .cs" />
     <Compile Include="Clients\KeyValue\IKeyValueClient.cs" />
     <Compile Include="Clients\KeyValue\KeyValueClient.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Clients\Token\TokenHandler\AuthenticationToken.cs" />
-    <Compile Include="Clients\Token\TokenHandler\DefaultTokenHandler.cs" />
-    <Compile Include="Clients\Token\TokenHandler\IAuthenticationToken.cs" />
-    <Compile Include="Clients\Token\TokenHandler\ITokenHandler.cs" />
-    <Compile Include="Clients\Token\ITokenClient.cs" />
-    <Compile Include="Clients\Token\TokenClient.cs" />
+    <Compile Include="Infrastructure\Security\AuthenticationToken.cs" />
+    <Compile Include="Infrastructure\Security\DefaultTokenHandler.cs" />
+    <Compile Include="Infrastructure\Security\IAuthenticationToken.cs" />
+    <Compile Include="Infrastructure\Security\ITokenHandler.cs" />
+    <Compile Include="Clients\Security\ITokenClient.cs" />
+    <Compile Include="Clients\Security\TokenClient.cs" />
     <Compile Include="Utility\UrlBuilder.cs" />
   </ItemGroup>
   <ItemGroup>
