The missing URL token is added to authorization token model The bug related to TokenClient error handling is fixed The DI module scanning is implemented

--- a/src/Baasic.Client.WebHost/Baasic.Client.WebHost.nuspec
+++ b/src/Baasic.Client.WebHost/Baasic.Client.WebHost.nuspec
@@ -11,7 +11,7 @@
     <summary />
     <copyright>Mono Ltd.</copyright>
     <language>en-US</language>
-    <tags>Baasic, .NET, Clients, Ninject</tags>
+    <tags>Baasic, .NET, Clients, WebHost</tags>
     <dependencies>
       <dependency id="Baasic.Client" version="[0.8.102,1.0.0)" />
     </dependencies>
