--- a/src/Baasic.Client.Ninject/Baasic.Client.Ninject.nuspec
+++ b/src/Baasic.Client.Ninject/Baasic.Client.Ninject.nuspec
@@ -14,6 +14,8 @@
     <tags>Baasic, .NET, Clients, Ninject</tags>
     <dependencies>
       <dependency id="Baasic.Client" version="[0.8.102,1.0.0)" />
+      <dependency id="Ninject" version="[3.2.2.0,3.3.0.0)" />
+      <dependency id="Ninject.Extensions.Conventions" version="[3.2.0.0,3.3.0.0)" />
     </dependencies>
   </metadata>
 </package>
