--- a/src/Baasic.Client/Baasic.Client.csproj
+++ b/src/Baasic.Client/Baasic.Client.csproj
@@ -64,7 +64,9 @@
     <Compile Include="..\SharedAssemblyInfo.cs">
       <Link>Properties\SharedAssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="Clients\Articles\ArticleSettingsClient.cs" />
     <Compile Include="Clients\Articles\ArticleTagClient.cs" />
+    <Compile Include="Clients\Articles\IArticleSettingsClient.cs" />
     <Compile Include="Clients\Articles\IArticleTagClient.cs" />
     <Compile Include="Clients\Dynamic\DynamicResourceClient.cs" />
     <Compile Include="Clients\Dynamic\IDynamicResourceClient.cs" />
