- insert user fix - profile client update fix

--- a/src/Baasic.Client.Model/Baasic.Client.Model.csproj
+++ b/src/Baasic.Client.Model/Baasic.Client.Model.csproj
@@ -61,6 +61,7 @@
     <Compile Include="KeyValue\KeyValue.cs" />
     <Compile Include="BuiltInModelBase.cs" />
     <Compile Include="Membership\CreateUserDTO.cs" />
+    <Compile Include="Membership\NewUser.cs" />
     <Compile Include="Membership\PasswordRecoveryRequestDTO.cs" />
     <Compile Include="Membership\PasswordRecoveryDTO.cs" />
     <Compile Include="Membership\UpdatePasswordDTO.cs" />
