--- a/src/Baasic.Client.Common/Baasic.Client.Common.nuspec
+++ b/src/Baasic.Client.Common/Baasic.Client.Common.nuspec
@@ -16,4 +16,7 @@
       <dependency id="Newtonsoft.Json" version="[6.0.8,9.0.0)" />
     </dependencies>
   </metadata>
+  <files>
+    <file src="bin\$configuration$\$id$.xml" target="lib\net45\" />
+  </files>
 </package>
