--- a/src/Baasic.Client.Ninject/Baasic.Client.Ninject.nuspec
+++ b/src/Baasic.Client.Ninject/Baasic.Client.Ninject.nuspec
@@ -13,7 +13,7 @@
     <language>en-US</language>
     <tags>Baasic, .NET, Clients, Ninject</tags>
     <dependencies>
-      <dependency id="Baasic.Client" version="[0.8.136,1.0.0)" />
+      <dependency id="Baasic.Client" version="[$version$,1.0.0)" />
       <dependency id="Ninject" version="[3.2.2.0,3.3.0.0)" />
       <dependency id="Ninject.Extensions.Conventions" version="[3.2.0.0,3.3.0.0)" />
     </dependencies>
