--- a/src/Baasic.Client.Common/Baasic.Client.Common.nuspec
+++ b/src/Baasic.Client.Common/Baasic.Client.Common.nuspec
@@ -17,6 +17,6 @@
     </dependencies>
   </metadata>
   <files>
-    <file src="bin\$configuration$\$id$.xml" target="lib\net45\" />
+    <!--<file src="bin\$configuration$\$id$.xml" target="lib\net45\" /> Note:VS 2015 has issue with portable library and NuGets with XMLs -->
   </files>
 </package>
