--- a/src/Baasic.Client.WebHost/Baasic.Client.WebHost.nuspec
+++ b/src/Baasic.Client.WebHost/Baasic.Client.WebHost.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2011/10/nuspec.xsd">
   <metadata>
     <id>$id$</id>
-    <version>$version$-alpha</version>
+    <version>$version$</version>
     <title>$title$</title>
     <authors>$author$</authors>
     <owners>Mono Ltd.</owners>
@@ -13,7 +13,7 @@
     <language>en-US</language>
     <tags>Baasic, .NET, Clients, WebHost</tags>
     <dependencies>
-      <dependency id="Baasic.Client" version="[0.8.102,1.0.0)" />
+      <dependency id="Baasic.Client" version="[$version$,1.0.0)" />
     </dependencies>
   </metadata>
 </package>
