--- a/src/Baasic.Client/Baasic.Client.nuspec
+++ b/src/Baasic.Client/Baasic.Client.nuspec
@@ -13,13 +13,13 @@
     <language>en-US</language>
     <tags>Baasic, .NET, Portable, Clients</tags>
     <dependencies>
-      <dependency id="Baasic.Client.Common" version="[0.8.136,1.0.0)" />
-      <dependency id="Baasic.Client.Model" version="[0.8.136,1.0.0)" />
+      <dependency id="Baasic.Client.Common" version="[$version$,1.0.0)" />
+      <dependency id="Baasic.Client.Model" version="[$version$,1.0.0)" />
       <dependency id="Newtonsoft.Json" version="[6.0.8,9.0.0)" />
       <dependency id="Microsoft.AspNet.WebApi.Client" version="[5.2.2,6.0.0)" />
     </dependencies>
   </metadata>
   <files>
-    <file src="bin\$configuration$\$id$.xml" target="lib\net45\" />
+    <!--<file src="bin\$configuration$\$id$.xml" target="lib\net45\" /> Note:VS 2015 has issue with portable library and NuGets with XMLs -->
   </files>
 </package>
