Working on AutoFac integration

--- a/src/Baasic.Client.Model/Baasic.Client.Model.csproj
+++ b/src/Baasic.Client.Model/Baasic.Client.Model.csproj
@@ -102,7 +102,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Baasic.Client.Model.nuspec" />
+    <None Include="Baasic.Client.Model.nuspec">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup />
