Implementation of  AutofacDependencyResolver. Tests written and refactored.

--- a/src/Baasic.Client.AutoFac/Baasic.Client.AutoFac.csproj
+++ b/src/Baasic.Client.AutoFac/Baasic.Client.AutoFac.csproj
@@ -49,6 +49,7 @@
       <Link>Properties\SharedAssemblyInfo.cs</Link>
     </Compile>
     <Compile Include="AutoFacDependencyResolver.cs" />
+    <Compile Include="AutoFacSettings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
