The bug related to PushStreamContent is fixed - https://forums.asp.net/t/1978292.aspx?Web+api+2+1+does+not+work+with+a+chunked+request The breaking change related to BaasicClient behaviour has been introduced, BaasicClient now throws exception on any status code that is not in range 200-299 and 404 Updated NuGets

--- a/src/Baasic.Client.Common/Baasic.Client.Common.csproj
+++ b/src/Baasic.Client.Common/Baasic.Client.Common.csproj
@@ -41,6 +41,7 @@
       <Link>Properties\SharedAssemblyInfo.cs</Link>
     </Compile>
     <Compile Include="Configuration\IClientConfiguration.cs" />
+    <Compile Include="ErrorHandling\BaasicClientException.cs" />
     <Compile Include="Extensions\EncodingExtensions.cs" />
     <Compile Include="Infrastructure\DependencyInjection\IDependencyResolver .cs" />
     <Compile Include="Infrastructure\DependencyInjection\IDIModule.cs" />
